workdpaceとチャンネルそれぞれに人を追加できるようにした
